# metagame

./: .gitignore
cpp/: .clang-format  CMakeLists.txt  meta.sourcemap  toolchain.cmake  wasm-sourcemap.py
cpp/include/: Actor.h  Allocator.h  Console.h  Debug.h  GL.h  JS.h  Libc.h  List.h  Log.h  Mat4.h  Ostream.h  Quat.h  Renderer.h  Slice.h  String.h  Transform.h  Vector3.h  lib.h
cpp/src/: Actor.cpp  Allocator.cpp  Console.cpp  Debug.cpp  GPUMesh.cpp  Init.cpp  Libc.cpp  Log.cpp  Main.cpp  Ostream.cpp  Renderer.cpp  Util.cpp  Vector3.cpp  main.cpp
shader/: basic.vert.glsl
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: GL.ts  GLTF.ts  Inspector.ts  Loader.ts  WASM.ts  WASMExports.ts  WASMImports.ts  main.ts
ts/src/Loaders/: GLTFLoader.ts
